[gd_scene load_steps=40 format=3 uid="uid://qkjd7gmxk5n7"]

[ext_resource type="Script" uid="uid://3ijqtom1ns3c" path="res://Scripts/switch.gd" id="1_phkb5"]
[ext_resource type="TileSet" uid="uid://bl2o7yp2wf0hx" path="res://Assets/tilemap.tres" id="1_t3hew"]
[ext_resource type="Texture2D" uid="uid://bvfdb37qfmqhb" path="res://Assets/Notes/blue note.png" id="3_gvbgn"]
[ext_resource type="Texture2D" uid="uid://c3e138bog2vrn" path="res://Assets/Notes/cyan note.png" id="4_2j8yr"]
[ext_resource type="Texture2D" uid="uid://d345hb5lttsn5" path="res://Assets/Notes/green note.png" id="5_f7cac"]
[ext_resource type="Texture2D" uid="uid://dtip3oppmbhcc" path="res://Assets/Notes/orange note.png" id="6_flrbu"]
[ext_resource type="Texture2D" uid="uid://8iaautcgo8ch" path="res://Assets/Notes/purple note.png" id="7_67knk"]
[ext_resource type="Texture2D" uid="uid://dr013wewxms2f" path="res://Assets/Notes/red note.png" id="8_ihrqo"]
[ext_resource type="Texture2D" uid="uid://dnmaecpngoxip" path="res://Assets/Notes/yellow note.png" id="9_xnpnf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cu6mf"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yuro"]
atlas = ExtResource("3_gvbgn")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3f0g"]
atlas = ExtResource("3_gvbgn")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw3u7"]
atlas = ExtResource("3_gvbgn")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gwtm"]
atlas = ExtResource("3_gvbgn")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldygs"]
atlas = ExtResource("4_2j8yr")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_66pgt"]
atlas = ExtResource("4_2j8yr")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lwuf"]
atlas = ExtResource("4_2j8yr")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0whwg"]
atlas = ExtResource("4_2j8yr")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0m0ij"]
atlas = ExtResource("5_f7cac")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6fwq"]
atlas = ExtResource("5_f7cac")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_no0xv"]
atlas = ExtResource("5_f7cac")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkt3y"]
atlas = ExtResource("5_f7cac")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_djyo0"]
atlas = ExtResource("6_flrbu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlm0c"]
atlas = ExtResource("6_flrbu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m1lw"]
atlas = ExtResource("6_flrbu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xwx38"]
atlas = ExtResource("6_flrbu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kal1a"]
atlas = ExtResource("7_67knk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42td7"]
atlas = ExtResource("7_67knk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4176r"]
atlas = ExtResource("7_67knk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_drx4m"]
atlas = ExtResource("7_67knk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fevtf"]
atlas = ExtResource("8_ihrqo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_htjwm"]
atlas = ExtResource("8_ihrqo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxdcf"]
atlas = ExtResource("8_ihrqo")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqwrf"]
atlas = ExtResource("8_ihrqo")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_elnla"]
atlas = ExtResource("9_xnpnf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_menk5"]
atlas = ExtResource("9_xnpnf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_63l6k"]
atlas = ExtResource("9_xnpnf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4at08"]
atlas = ExtResource("9_xnpnf")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2oe0c"]
animations = [{
"frames": [],
"loop": true,
"name": &"blank",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_2yuro")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_m3f0g")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_aw3u7")
}, {
"duration": 4.8,
"texture": SubResource("AtlasTexture_5gwtm")
}],
"loop": false,
"name": &"blue",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_ldygs")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_66pgt")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_2lwuf")
}, {
"duration": 4.8,
"texture": SubResource("AtlasTexture_0whwg")
}],
"loop": false,
"name": &"cyan",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_0m0ij")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_s6fwq")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_no0xv")
}, {
"duration": 4.8,
"texture": SubResource("AtlasTexture_wkt3y")
}],
"loop": false,
"name": &"green",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_djyo0")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_dlm0c")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_6m1lw")
}, {
"duration": 4.8,
"texture": SubResource("AtlasTexture_xwx38")
}],
"loop": false,
"name": &"orange",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_kal1a")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_42td7")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_4176r")
}, {
"duration": 4.8,
"texture": SubResource("AtlasTexture_drx4m")
}],
"loop": false,
"name": &"purple",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_fevtf")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_htjwm")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_dxdcf")
}, {
"duration": 4.8,
"texture": SubResource("AtlasTexture_uqwrf")
}],
"loop": false,
"name": &"red",
"speed": 5.0
}, {
"frames": [{
"duration": 0.1,
"texture": SubResource("AtlasTexture_elnla")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_menk5")
}, {
"duration": 0.1,
"texture": SubResource("AtlasTexture_63l6k")
}, {
"duration": 4.8,
"texture": SubResource("AtlasTexture_4at08")
}],
"loop": false,
"name": &"yellow",
"speed": 5.0
}]

[node name="switch" type="Area2D"]
z_index = 1
script = ExtResource("1_phkb5")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 5, 0, 1, 0, 4, 0, 0, 0)
tile_set = ExtResource("1_t3hew")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_cu6mf")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = -11.0
offset_top = -24.0
offset_right = 29.0
offset_bottom = -1.0

[node name="AnimatedNote" type="AnimatedSprite2D" parent="."]
position = Vector2(16, -2)
scale = Vector2(0.69, 0.69)
sprite_frames = SubResource("SpriteFrames_2oe0c")
animation = &"blank"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
